# python-docker-job-service-orchestrator

./: README.md  app.py  main.py  pyproject.toml
architecture/: diagram.drawio
examples/docker_images/jobs/: Dockerfile  build.ps1  job.py
examples/docker_images/services/: Dockerfile  build.ps1  service.py
examples/requests/jobs/: monitor_job.ps1  remove_job.ps1  run_job.ps1  schedule_job.ps1
examples/requests/scheduled/: schedule_cron_job.ps1
examples/requests/services/: add_service.ps1  monitor_service.ps1  remove_service.ps1  scale_service.ps1
requests/jobs/: run_job.ps1
requests/services/: add_service.ps1
routes/: image_api.py  job_api.py  scheduler_api.py  service_api.py
sample_images/jobs/: Dockerfile
sample_images/services/: service.py
services/: docker_service.py  scheduler_service.py
static/css/: styles.css
static/js/: scripts.js
templates/: services.html
