[tool.poetry]
name = "python-docker-job-service-orchestrator"
version = "1.0.0"
description = "Flask application that allows for management and monitoring of docker swarm jobs and services"
authors = ["Alexander Whipp (awhipp)"]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.0.1"
python-dotenv = "^1.0.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
croniter = "^1.3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
app = "app:app"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
